force-app/main/default/objects/FINS_Banking_Customer_Survey__c/FINS_Banking_Customer_Survey__c.object-meta.xml
<CustomObject>
    <label>Customer Survey</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Customer Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>