force-app/main/default/objects/FINS_Banking_Customer_Survey__c/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <description>Turns the field &quot;CSAT Score&quot; into a number that can be averaged.</description>
    <formula>IF(CONTAINS(TEXT(Question_2__c), &quot; - &quot;),
VALUE(LEFT(TEXT(Question_2__c), FIND(&quot; - &quot;, TEXT(Question_2__c)) - 1)),
VALUE(TEXT(Question_2__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSAT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>