force-app/main/default/objects/FINS_Banking_Customer_Survey__c/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <description>Turns the field &quot;Effortless Experience?&quot; into a number that can be averaged.</description>
    <formula>VALUE(LEFT(TEXT(Question_1__c), 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effort</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>