force-app/main/default/objects/FINS_Banking_Customer_Survey__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <description>Turns the field &quot;NPS Score&quot; into a number that can be averaged.</description>
    <formula>IF(CONTAINS(TEXT(Question_3__c), &quot; - &quot;),
VALUE(LEFT(TEXT(Question_3__c), FIND(&quot; - &quot;, TEXT(Question_3__c)) - 1)),
VALUE(TEXT(Question_3__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>