force-app/main/default/objects/FINS_Banking_Customer_Survey__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <inlineHelpText>How would you rate your overall satisfaction with your customer service experience?</inlineHelpText>
    <label>CSAT Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Very Dissatisfied</fullName>
            </value>
            <value>
                <fullName>2 - Not Satisfied</fullName>
            </value>
            <value>
                <fullName>3 - Neutral</fullName>
            </value>
            <value>
                <fullName>4 - Satisfied</fullName>
            </value>
            <value>
                <fullName>5 - Very Satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>