force-app/main/default/objects/FINS_Banking_Customer_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Case__c</columns>
    <columns>Question_2__c</columns>
    <columns>Question_1__c</columns>
    <columns>Question_4__c</columns>
    <columns>Question_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>